--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,8 +19,7 @@
     "react-native": "0.71.8",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "@expo/vector-icons": "^13.0.0"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
